--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "deploy": "node deploy-commands.js",
+    "full": "node deploy-commands.js && node index.js"
   },
   "keywords": [
     "bot",
